WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159154
No error message when passing an invalid API version to ApplePaySession constructor
https://bugs.webkit.org/show_bug.cgi?id=159154
Summary
No error message when passing an invalid API version to ApplePaySession const...
Anders Carlsson
Reported
2016-06-27 11:04:53 PDT
No error message when passing an invalid API version to ApplePaySession constructor
Attachments
Patch
(1.64 KB, patch)
2016-06-27 11:05 PDT
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-06-27 11:05:35 PDT
Created
attachment 282143
[details]
Patch
Tim Horton
Comment 2
2016-06-27 11:07:05 PDT
Comment on
attachment 282143
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282143&action=review
> Source/WebCore/Modules/applepay/ApplePaySession.cpp:652 > + if (!version || !paymentCoordinator.supportsVersion(version)) {
Why does supportsVersion not return false for version=0?
Anders Carlsson
Comment 3
2016-06-27 11:26:58 PDT
(In reply to
comment #2
)
> Comment on
attachment 282143
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=282143&action=review
> > > Source/WebCore/Modules/applepay/ApplePaySession.cpp:652 > > + if (!version || !paymentCoordinator.supportsVersion(version)) { > > Why does supportsVersion not return false for version=0?
supportsVersion throws an exception if you pass 0 since it's out of range.
Anders Carlsson
Comment 4
2016-06-27 11:28:19 PDT
Committed
r202499
: <
http://trac.webkit.org/changeset/202499
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug