No error message when passing an invalid API version to ApplePaySession constructor https://bugs.webkit.org/show_bug.cgi?id=159154

Reviewed by Tim Horton.

Log an error message if the version is not supported. Also, check for version 0 since that is also not supported.

* Modules/applepay/ApplePaySession.cpp:
(WebCore::ApplePaySession::create):

Canonical link: https://commits.webkit.org/177252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202499 268f45cc-cd09-0410-ab3c-d52691b4dbfc